--- a/styles/index.css
+++ b/styles/index.css
@@ -7,9 +7,9 @@ p{
     text-align: center;
     background-color: black;
     width: 100%;
-    height: 100px;
+    height: 200px;
 }
 
-.topbar p{
-    top: 50px;
+.fab{
+font-size: 75px;
 }
