--- a/styles/style.css
+++ b/styles/style.css
@@ -121,7 +121,7 @@ nav .hamburger-menu{
     height: auto;
     padding-top: 10vh;
     align-items: center;
-
+    font-family: 'Poppins', sans-serif;
 }
 
 .imagecontainer{
@@ -144,7 +144,7 @@ nav .hamburger-menu{
     text-align: center;
     border-radius: 20px;
     background-color: rgba(129, 159, 157, 0.4);
-    width: 500px;
+    width: 550px;
     justify-content: center;
     margin-left: auto;
     margin-right: auto;
@@ -247,9 +247,9 @@ nav .hamburger-menu{
         color: #E2EEF6;
         z-index: 11;
         top: 0px;
-        right: 2px;
-        position: absolute;
+
         margin: 0px;
+        margin-right: 10px;
     }
     .navbar{
         position: fixed;
