--- a/styles/projectarcade.css
+++ b/styles/projectarcade.css
@@ -119,7 +119,7 @@
 }
 .window{
     height: 85vh;
-    background-color: #0FC0FC;
+    background-color: var(--color5);
     width: 100%;
     overflow: scroll;
     overflow-x: hidden;
@@ -127,11 +127,20 @@
 }
 .textwindow{
     width: 50%;
-    background-color:aquamarine;
-    height: 100vh;
+    background-color:var(--color2);
+    height: 125vh;
     margin-top: 1%;
     margin-left: 1%;
     float: left;
+    color: #D4FF47;
+    font-size: 25px;
+    font-family: 'Quicksand', sans-serif;
+    text-align: left;
+    padding: 10px;
+}
+.textwindow h1{
+    text-align: center;
+    font-weight: bold;
 }
 .imagewindow{
     float: left;
@@ -141,12 +150,18 @@
     align-items: center;
     margin-left: auto;
     margin-right: auto;
-    left: 15%;
+    text-align: center;
+    justify-content: center;
+ 
 }
 .imagewindow img{
-    width: 50%;
+    width: 20%;
     object-fit: cover;
     height: auto;
+}
+.imagewindow iframe{
+    width: 800px;
+    height: 600px;
 }
 
 h3{
