--- a/styles/projectdata.css
+++ b/styles/projectdata.css
@@ -61,11 +61,23 @@
     width: 250px;
     font-size: 30px;
 }
+.topcontainer .home{
+    background-color: var(--color5);
+    padding: 10px;
+    border-radius: 20px;
+    color: var(--color3);
+    top: 2%;
+    position: absolute;
+    width: 250px;
+    font-size: 30px;
+    left: 1%;
+    text-decoration: none;
+}
 .back{
-    left: 5%;
+    left: 1%;
 }
 .next{
-    right: 5%;
+    right: 1%;
 }
 
 .half-circle {
