--- a/styles/style.css
+++ b/styles/style.css
@@ -49,6 +49,7 @@ nav{
     height: 10vh;
     position: fixed;
     width: 100%;
+    z-index: 20000 !important;
 }
 /*
 .navbar{
@@ -62,6 +63,7 @@ nav .mainMenu{
     margin: 0%;
     margin-right: 10px;
     padding: 10px;
+
 }
 nav .mainMenu li a{
     display: inline-flex;
@@ -332,9 +334,42 @@ nav .hamburger-menu{
 /*About me Section*/
 .AboutmeContainer{
     width: 100%;
-    height: 400px;
+    height: 110vh;
     font-size: 20px;
     font-family: 'Exo 2', sans-serif;
+    background-color: var(--charcoal);
+    text-align: center;
+    padding-top: 50px;
+    /*
+    border-top: black 2px solid;
+    */
 }
+
+.AboutmeContainer .leftside{
+  width: 50%;
+  height: 80vh;
+  margin-top: 50px;
+  position: absolute;
+  left: 0;
+  
+}
+.AboutmeContainer .leftside img{
+  width: 80%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.AboutmeContainer .rightside{
+  width: 45%;
+  height: 80vh;
+  background-color: var(--hunter-green);
+  margin-top: 50px;
+  position: absolute;
+  right: 5%;
+  -webkit-box-shadow: 0px 0px 32px 5px #3E5536; 
+  box-shadow: 0px 0px 32px 5px #3E5536;
+
+}
+
 
 
