--- a/styles/style.css
+++ b/styles/style.css
@@ -63,6 +63,7 @@ nav .mainMenu{
     margin: 0%;
     margin-right: 1%;
     padding: 1%;
+    transition: cubic-bezier(1s, 0s, 0s 1s) all ease !important;
 
 }
 nav .mainMenu li a{
@@ -103,6 +104,7 @@ nav .hamburger-menu{
     font-size: 20px;
     cursor: pointer;
     display: none;
+    transition: 0.8s all ease;
 }
 
 .line{
@@ -278,6 +280,7 @@ nav .hamburger-menu{
   html,body{
     width: 100%;
     overflow-x: hidden;
+    
   }
     nav .mainMenu {
         height: 100vh;
@@ -292,7 +295,13 @@ nav .hamburger-menu{
         background: #000;
         transition: top 1s ease;
         display: flex;
-        transition: cubic-bezier(1s, 0s, 0s 1s);
+        transition: cubic-bezier(1s, 0s, 0s 1s) all ;
+        transition: all 0.8s ease;
+        width: 100%;
+    }
+    nav .mainMenu li a{
+      padding: 20px;
+      font-size: 1.6rem;
     }
     nav .mainMenu li a:hover {
         background: none;
@@ -306,7 +315,7 @@ nav .hamburger-menu{
         color: #E2EEF6;
         z-index: 11;
         top: 0px;
-
+        transition: all 0.8s;
         margin: 0px;
         margin-right: 10px;
     }
@@ -316,6 +325,7 @@ nav .hamburger-menu{
         z-index: 11;
         text-align: center;
         margin: 0%;
+
     }
     .navbar .title h1{
         justify-content: center;
@@ -324,10 +334,14 @@ nav .hamburger-menu{
         display: flex;
     }
     .centercontainer{
-        padding-top: 30vh;
+        padding-top: 40vh;
+    }
+    .titlee{
+      padding: 30px;
     }
     .AboutmeContainer{
-      height: 170vh !important;
+      height: 100%;
+      padding-bottom: 0% !important;
     }
     .AboutmeContainer .left img{
       height: 50%;
@@ -337,20 +351,49 @@ nav .hamburger-menu{
       justify-self: center;
     }
     .AboutmeContainer .right p{
-      font-size: 1.3vh;
-      line-height: 1.4vh;
-    }
-    .AboutmeContainer .right h1{
       font-size: 1.5vh;
       line-height: 1.6vh;
+    }
+    .AboutmeContainer .right h1{
+      font-size: 2vh;
+      line-height: 2.1vh;
       margin-top: 1%;
     }
     .AboutmeContainer .right h3{
-      font-size: 1.5vh;
-      line-height: 1.6vh;
+      font-size: 2vh;
+      line-height: 2.1vh;
       margin-top: 1%;
     }
+    .portfolioinformation{
+      font-size: 15px;
+    }
+    .card{
+      width: 300px;
+      height: 300px;
+    }
 
+    .container .row .left img{
+      width: 200px !important;
+      height: 200px !important;
+      margin: 0 ;
+      padding: 0;
+    }
+    .skills li{
+      font-size: 15px;
+      margin: 0;
+      padding: 0;
+    }
+    .AboutmeContainer .container{
+      padding: 0;
+      margin: 0% !important;
+      overflow: hidden;
+    }
+    .right p{
+      font-size: 10px;
+    }
+
+
+    
 }
 
 .item{
@@ -365,13 +408,15 @@ nav .hamburger-menu{
 /*About me Section*/
 .AboutmeContainer{
     width: 100%;
-    height: 120vh;
+    height: 100%;
+    padding-bottom: 20%;
     font-size: 20px;
     font-family: 'Exo 2', sans-serif;
     background-color: var(--charcoal);
     text-align: center;
     padding-top: 50px;
     color: white;
+    overflow-y: hidden !important;
     /*
     border-top: black 2px solid;
     */
@@ -567,11 +612,11 @@ nav .hamburger-menu{
   color: white;
 }
 .porfolioGalery{
-  background-color: var(--morning-blue);
+  background-color: var(--charcoal);
   font-family: 'Exo 2', sans-serif;
   text-align: center;
   width: 100%;
-  height: 110vh;
+  height: 100%;
   font-size: 20px;
   padding-top: 20px;
   color: white;
@@ -581,33 +626,55 @@ nav .hamburger-menu{
   width: 100%;
   height: 20vh;
 }
-.porfolioGalery .leftside{
-  position: absolute;
-  left: 10%;
+.porfolioGalery .col{
   width: 30%;
   background-color: rgb(103, 128, 126);
   border-radius: 20px;
   padding: 1%;
   margin-top: 2%;
-}
-.porfolioGalery .rightside{
-  position: absolute;
-  right: 10%;
-  width: 30%;
-  background-color: rgb(103, 128, 126);
-  border-radius: 20px;
-  padding: 1%;
-  margin-top: 2%;
+  margin: 5%;
+  display: inline;
 }
 .portfoliocontent{
   width: 100%;
   height: 70vh;
+  
 }
 
 .cards{
-  position: absolute;
   width: 100%;
+  display: inline;
+}
 
+.cards .col{
+  width: 300px;
+  height: 300px;
+  border: none;
+  align-items: center;
+  position: relative;
+  display: inline;
+  justify-content: center;
+}
+.cards .col .card{
+  width: 100%;
+  height: 100%;
+  background-color: rgb(103, 128, 126);
+  border: none;
+}
+.card-title{
+  padding: 10px;
+}
+.btn-primary{
+  background-color: var(--columbia-blue);
+  border-color: var(--columbia-blue);
+  color: #000;
+  transition: all 0.8s ease;
+  padding: 10px;
+}
+.btn-primary:hover{
+  background-color: var(--hunter-green);
+  border-color: var(--hunter-green);
+  color: white;
 }
 
 
