--- a/styles/game.css
+++ b/styles/game.css
@@ -8,13 +8,13 @@
 .game {
     height: 100vh;
     width: 100vw;
-    background-image: url(./images/game/achtergrond.png);
+    background-image: url(../images/game/achtergrond.png);
     background-size: cover;
     position: relative;
     overflow: hidden;
 }
 .peer {
-  background-image: url(./images/game/peer.png);
+  background-image: url(../images/game/peer.png);
   background-size: cover;
   position: absolute;
   width: 80px;
@@ -22,7 +22,7 @@
 }
 
 .block {
-  background-image: url(./images/game/appel.png);
+  background-image: url(../images/game/appel.png);
   background-size: cover;
   position: absolute;
   width: 80px;
